--- a/css/style.css
+++ b/css/style.css
@@ -793,6 +793,7 @@ Tags: 	hotel, resort, tour, tourism, tourist, tours website, travel, traveler, t
      color: #727272;
      font-size: 15px;
      font-weight: 500;
+     height: 2em;
 }
  .popular-packages .single-package .package-content p span {
      color: #37b721;
