--- a/admin/templates/roteiro.html
+++ b/admin/templates/roteiro.html
@@ -238,7 +238,7 @@
                         <div class="control-group">
                             <label for="video" class="control-label">LINK DE VIDEO:</label>
                             <p>Video do roteiro</p>
-                            <input required name="video" type="text" class="input-xlarge form-control span12" value="{VIDEO}" placeholder="Http://..."/>
+                            <input name="video" type="text" class="input-xlarge form-control span12" value="{VIDEO}" placeholder="Http://..."/>
                         </div>
                     </div>
                 </div>
