ajustes nas imagens

--- a/admin/templates/roteiro.html
+++ b/admin/templates/roteiro.html
@@ -53,7 +53,7 @@
         <li class="{ACITVE_1}"><a href="#profile" data-toggle="tab">DADOS CARD</a></li>
         <li class="{ACITVE_2}"><a href="#messages" data-toggle="tab">DADOS ROTEIRO</a></li>
         <li class="{ACITVE_3}"><a href="#settings" data-toggle="tab">FOTOS</a></li>
-        <li class="{ACITVE_4}"><a href="#itineraries" data-toggle="tab">ETINERÁRIOS</a></li>
+        <li class="{ACITVE_4}"><a href="#itineraries" data-toggle="tab">ROTEIROS</a></li>
         <!-- END BLOCK_EDITAR_PILL -->
       </ul>
       <div class="tab-content">
