campo texto editor no roteiro

--- a/admin/templates/roteiro.html
+++ b/admin/templates/roteiro.html
@@ -229,7 +229,7 @@
                         <div class="control-group">
                             <label for="description" class="control-label">DESCRIÇÃO:</label>
                             <p>Descrição que aparece  no roteiro</p>
-                            <input required name="description" type="text" class="input-xlarge form-control span12" value="{DESCRIPTION}"/>
+                            <textarea rows="10" required name="description" class="ckeditor input-xlarge form-control span12">{DESCRIPTION}</textarea>                            
                         </div>
                     </div>
                 </div>
