--- a/admin/templates/slider.html
+++ b/admin/templates/slider.html
@@ -14,7 +14,7 @@
     });
 </script>
 <section>
-    <h1>Roteiros<br/><small>EDITAR OS DADOS DO ROTEIRO.</small></h1>
+    <h1>SLIDERS<br/><small>EDITAR OS SLIDERS DA PÁGINA INICIAL.</small></h1>
     <div class="row">
         <div class="form-field span10">
             <div class="control-group">
